bp: Return true for can_match on idle search shards
https://github.com/elastic/elasticsearch/commit/1a3f9e5a07c52c2a70dc591ad0da1c394e47dd46